[package]
name = "rust_test"
version = "0.1.0"
authors = ["cuongld"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.4.0", features = ["full"]}
reqwest = {version = "0.11.2",features = ["json","blocking"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
regex = "1.4.5"
chrono = "0.4.19"
futures = "0.3.14"
rstest = "0.11.0"